--- a/.rvmrc
+++ b/.rvmrc
@@ -1,6 +1,4 @@
-if [[ -d "${rvm_path:-$HOME/.rvm}/environments" \
-  && -s "${rvm_path:-$HOME/.rvm}/environments/ruby-1.9.1-p378@polynovanissen" ]] ; then
-  \. "${rvm_path:-$HOME/.rvm}/environments/ruby-1.9.1-p378@polynovanissen"
-else
-  rvm --create  "ruby-1.9.1-p378@polynovanissen"
-fi
+rvm 1.9.2@rails3 --create
+
+if ! command -v bundle ; then
+ gem install bundler
